@@ -2,7 +2,7 @@
 \ind{modules!\modhttpbind{}}\ind{modhttpbind}
 
 This module implements XMPP over Bosh (formerly known as HTTP Binding)
-as outlined by \xepref{0206}.
+as defined in \xepref{0124} and \xepref{0206}.
 It extends ejabberd's built in HTTP service with a configurable
 resource at which this service will be hosted.
 
@@ -47,6 +47,18 @@ For example:
                          web_admin
                         ]
   },
+  ...
+]}.
+\end{verbatim}
+
+The maximum inactivity period is by default 30 seconds.
+This can be configured with the module option \term{max\_inactivity}.
+For example, to set 50 seconds:
+\begin{verbatim}
+{modules,
+ [
+  ...
+  {mod_http_bind, [ {max_inactivity, 50} ]},
   ...
 ]}.
 \end{verbatim}
